2008-04-03  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c (CopyData): Applied patch [Bug 1932639] to
	* tests/io.test: prevent fcopy from calling -command synchronously
	* tests/chanio.test: the first time. Thanks to Alexandre Ferrieux
	  <ferrieux@users.sourceforge.net> for report and patch.

2008-04-02  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c (CopyData): Applied patch for the fcopy problem
	  [Bug 780533], with many thanks to Alexandre Ferrieux
	  <ferrieux@users.sourceforge.net> for tracking it down and
	  providing a solution. Still have to convert his test script into
	  a proper test case.

2008-04-01  Andreas Kupries  <andreask@activestate.com>

	* generic/tclStrToD.c: Applied patch for [Bug 1839067] (fp
	* unix/tcl.m4: rounding setup on solaris x86, native cc), provided
	* unix/configure: by Michael Schlenker. configure regen'd.

2008-04-01  Don Porter	<dgp@users.sourceforge.net>

	* generic/tclStubLib.c (Tcl_InitStubs):	Added missing error message.
	* generic/tclPkg.c (Tcl_PkgInitStubsCheck):

2008-03-30  Kevin Kenny  <kennykb@acm.org>

	* generic/tclInt.h (TclIsNaN):
	* unix/configure.in: Added code to the configurator to check for
	                     a standard isnan() macro and use it if one
	                     is found.  This change avoids bugs where
	                     the test of ((d) != (d)) is optimized away
			     by an overaggressive compiler. [Bug 1783544]
	* generic/tclObj.c: Added missing #include <math.h> needed to
			    locate isnan() after the above change.
	
	* unix/configure: autoconf-2.61
	
	* tests/mathop.test (mathop-25.9, mathop-25.14): Modified tests
	to deal with (slightly buggy) math libraries in which pow()
	returns an incorrectly rounded result. [Bug 1808174]
	
2008-03-26  Don Porter	<dgp@users.sourceforge.net>

	*** 8.5.2 TAGGED FOR RELEASE ***

	* generic/tcl.h:	Bump to 8.5.2 for release.
	* library/init.tcl:
	* tools/tcl.wse.in:
	* unix/configure.in:
	* unix/tcl.spec: